code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2513
expression: section_closed
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model----------------------------------------------------------------------------+---+
 |                                                                                            | x |
 |                                                                                            +---+
 | ◂ hide                + Select Model & Reasoning --------------------------------------------+ |
 | ›  ⌂ Model            |                                                                      | |
 |    ✶ Theme            | Current model: gpt-5.3-codex                                         | |
 |    ⚙ Interface        | Reasoning effort: Medium                                             | |
 |    ✶ Experimental     |                                                                      | |
 |    ❯ Shell            | Mode Settings                                                        | |
 |    ▲ Shell escalation | Fast mode speeds up replies. 1M Context is available on supported mo | |
 |    ◈ Shell profiles   | Auto uses 1M limits and pre-turn compaction checks. Past 272,000 inp | |
 |    ⊘ Exec limits      | › Context preset: auto                                               | |
 |    ↓ Updates          |   Context window: 272,000 tokens (auto)                              | |
 |    ◉ Accounts         | ↑ ↓ navigate   ◂ ▸ +/- adjust   Enter select/edit                    | |
 |    ♦ Secrets          | Ctrl+S save default   Esc cancel                                     | |
 |  ↓ ★ Agents           +----------------------------------------------------------------------+ |
 | Ctrl+B hide  •  Esc back  •  focus: Content                                                    |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
