code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2509
expression: section_open
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model----------------------------------------------------------------------------+---+
 |                                                                                            | x |
 |                                                                                            +---+
 | ◂ hide                + Select Model & Reasoning --------------------------------------------+ |
 | ›  ⌂ Model            |  +-----------------------------------------+                         | |
 |    ✶ Theme            | C|Model Shortcuts                          |                         | |
 |    ⚙ Interface        | R|                                         |                         | |
 |    ✶ Experimental     |  |• Esc    Return to overview              |                         | |
 |    ❯ Shell            | M|• Tab    Focus content                   |                         | |
 |    ▲ Shell escalation | F|• Shift+Tab  Focus sidebar               |vailable on supported mo | |
 |    ◈ Shell profiles   | A|• ↑ ↓    Change section (sidebar focus)  |checks. Past 272,000 inp | |
 |    ⊘ Exec limits      | ›|• ?      Toggle this help                |                         | |
 |    ↓ Updates          |  |                                         |                         | |
 |    ◉ Accounts         | ↑|Press Esc twice to close                 |/edit                    | |
 |    ♦ Secrets          | C+-----------------------------------------+                         | |
 |  ↓ ★ Agents           +----------------------------------------------------------------------+ |
 | Ctrl+B hide  •  Esc back  •  focus: Content                                                    |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
