code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_layout.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2425
expression: output
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-------------------------------------------------------------------------+---+
 |                                                                                            | x |
 |                                                                                            +---+
 | › ⌂ Model            Model: GPT-5.3-Codex (Medium)                                             |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   ✶ Theme            Theme: Light - Photon (16-color) · Spinner: Diamond                       |
 |   + Switch between preset color palettes and adjust contrast.                                  |
 |                                                                                                |
 |   ⚙ Interface        Mode: overlay · Icons: Unicode                                            |
 |   + Control Settings UI routing and other layout preferences.                                  |
 |                                                                                                |
 |   ✶ Experimental     Enabled: 0/5                                                              |
 |   + Toggle experimental features (saved to config.toml and applied after session reconf...     |
 |                                                                                                |
 |   ❯ Shell            Shell: auto                                                               |
 | ↑ ↓ navigate   Enter open   Esc close   ? help                                                 |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
