code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_overlay_overview_truncates.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2437
expression: output
---
 +--------------------------------------------------------+
 |                          Code                          |
 +--------------------------------------------------------+
 +Settings ▸ Overview---------------------------------+---+
 |                                                    | x |
 |                                                    +---+
 | › ⌂ Model            Model: GPT-5.3-Codex (Medium)     |
 |   + Choose the language model used for new comp...     |
 |                                                        |
 |   ✶ Theme            Theme: Light - Photon (16-colo... |
 |   + Switch between preset color palettes and ad...     |
 | ↑ ↓ navigate   Enter open   Esc close   ? help         |
 |                                                        |
 +--------------------------------------------------------+

 +--------------------------------------------------------+
 | What can I code for you today?                         |
 +--------------------------------------------------------+
 Read Only  (Shift+Tab change)   Ctrl+G editor  •  API key
