code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__simple_conversation.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 •

 ›   Can you help me understand the available commands?

     R #3 · gpt-5.4 · Xs ago
     Hello! How can I help you today?


     R #4 · gpt-5.4 · Xs ago
 •   I can help with various tasks including:
 ▼
     - Writing code
     - Reading files
     - Running commands


 +----------------------------------------------------------------------------+
 | Where do you want to start?                                                |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
