code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__startup_model_migration_notice_banner.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2927
expression: output
---
 +------------------------------------------------------------------------------------------------+
 |     Recommended model: gpt-5.4-codex (current: gpt-5.3-codex)  [Switch now]  [Keep current]    |
 +------------------------------------------------------------------------------------------------+





 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
