code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__tool_spam_folded_scrollback.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2913
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+
 ✓   Finished release profile                                            ↑Top
 ▼   warning: unused import
     warning: dead code

 ✓   Complete, duration: Xs
 ▼   + invocation: list_dir({"path":"/src"})
     + path: /src

     main.rs
     lib.rs
     api/
     utils/
     config/
     tests/
     benches/

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
